# SUP

./: .gitignore  README.md  pyproject.toml  requirements.txt  sup.toml  sup.toml.example
Documentation/: SUP_Documentation.docx  SUP_Documentation_v1.1.docx  SUP_Roadmap.html  SUP_StarterGuide.docx
sup_ids/: __init__.py  alert_engine.py  brute_tracker.py  cli.py  config.py  log_parser.py  platform_reader.py  splunk_forwarder.py
tests/: test_alert_engine.py  test_brute_tracker.py  test_config.py  test_integration.py  test_log_parser.py  test_platform_reader.py  test_splunk_forwarder.py
