[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "sup-ids"
version     = "1.1.0"
description = "SUP — Systemic Undercover Predator: Cross-platform CLI Intrusion Detection System"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.10"
keywords    = ["ids", "intrusion-detection", "security", "siem", "splunk", "brute-force", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "click>=8.1",
    "requests>=2.28",
]

[project.urls]
Homepage   = "https://github.com/yourorg/sup-ids"
Repository = "https://github.com/yourorg/sup-ids"
Issues     = "https://github.com/yourorg/sup-ids/issues"

[project.scripts]
sup = "sup_ids.cli:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["sup_ids*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
